--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,11 +1,3 @@
-@mixin circle($size) {
-  border-radius: 50%;
-  height: $size;
-  line-height: $size;
-  padding: $size;
-  text-align: center;
-  width: $size;
-}
 
 body {
   background: #f5f5f5;
@@ -13,42 +5,9 @@ body {
   font-size: 16px;
 }
 
-#counterWrapper {
-
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-
-  #counter {
-
-    @include circle(2em);
+  button {
     background: #eee;
-    border: 4px double #ccc;
-    font-size: 1.5em;
-    font-weight: 900;
-    order: 2;
-
-    &.positive {
-      color: blue;
-    }
-
-    &.negative {
-      color: red;
-    }
-
-  }
-
-  #up {
-    @include circle(1.5em);
     border: 3px solid #672D64;
-    color: #000;
-    display: block;
-    text-decoration: none;
-    order: 2;
-    &:hover {
-      background: #672D64;
-      color: #fff;
-    }
+    font-size: 1.5em;
+    
   }
-}
